resolve quote dialog layout shift

--- a/easer-app/src/components/quote-dialog/quote-dialog.scss
+++ b/easer-app/src/components/quote-dialog/quote-dialog.scss
@@ -1,29 +1,32 @@
 ux-dialog-container {
   background: rgba(0, 0, 0, 0.3);
+  
+  
+  @media screen and (max-width: 750px) {
+
+    > div > div {
+      width: 100%!important;
+    }
+
+    .dialog {
+      width: 100%!important;
+    }
+  }
 }
 
 .dialog {
   background: var(--light--primary);
   color: var(--light--primary-text);
-  max-width: 600px;
+  width: 600px;
   min-height: 500px;
-  
-  @media screen and (max-width: 750px) {
-    width: 100%;
-    &--content {
-      width: 100%!important;
-      padding: 0!important;
-    }
-  }
   
   &--header {
 
   }
 
   &--content {
-    // background: var();
-    width: calc(100% - 200px);
-    padding: 0 100px;
+    width: 100%;
+    padding: 0;
     height: calc(500px - 72px * 2);
     
     input, textarea, select, option {
